Complete 18-part Mini-AWS implementation: Multi-tenancy, Compute/Lambda runtimes, S3/RDS, Network ACLs, Observability