@@ -1,141 +1,160 @@
 package com.minicloud.api.route;
 
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
+import com.minicloud.api.auth.SecurityUtils;
+import com.minicloud.api.domain.NetworkAcl;
+import com.minicloud.api.domain.NetworkAclRepository;
+import com.minicloud.api.domain.NetworkAclRule;
+import com.minicloud.api.dto.AddNaclRuleRequest;
+import com.minicloud.api.dto.CreateNaclRequest;
+import com.minicloud.api.dto.NaclEvaluationRequest;
+import com.minicloud.api.dto.NaclEvaluationResponse;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.stream.Collectors;
+import java.time.LocalDateTime;
+import java.util.Comparator;
+import java.util.List;
+import java.util.UUID;
 
-/**
- * NetworkAclService — Simulated stateless Network ACL firewall at the Subnet boundary.
- * Evaluates rules from lowest rule number to highest rule number.
- */
 @Slf4j
 @Service
+@RequiredArgsConstructor
 public class NetworkAclService {
 
-    private final Map<UUID, List<NetworkAclRule>> subnetAcls = new ConcurrentHashMap<>();
+    private final NetworkAclRepository naclRepository;
 
-    @Data
-    @Builder
-    @NoArgsConstructor
-    @AllArgsConstructor
-    public static class NetworkAclRule {
-        private int ruleNumber;
-        private String protocol; // TCP, UDP, ALL
-        private int fromPort;
-        private int toPort;
-        private String cidrBlock;
-        private boolean allow; // true = ALLOW, false = DENY
+    @Transactional
+    public NetworkAcl createAcl(CreateNaclRequest request, String accountId) {
+        NetworkAcl acl = NetworkAcl.builder()
+                .name(request.getName())
+                .accountId(accountId)
+                .vpcId(request.getVpcId())
+                .subnetId(request.getSubnetId())
+                .isDefault(false)
+                .createdAt(LocalDateTime.now())
+                .build();
+
+        NetworkAclRule defaultIngress = NetworkAclRule.builder()
+                .ruleNumber(100)
+                .type("INGRESS")
+                .protocol("ALL")
+                .ruleAction("ALLOW")
+                .allow(true)
+                .cidrBlock("0.0.0.0/0")
+                .fromPort(0)
+                .toPort(65535)
+                .createdAt(LocalDateTime.now())
+                .build();
+
+        NetworkAclRule defaultEgress = NetworkAclRule.builder()
+                .ruleNumber(100)
+                .type("EGRESS")
+                .protocol("ALL")
+                .ruleAction("ALLOW")
+                .allow(true)
+                .cidrBlock("0.0.0.0/0")
+                .fromPort(0)
+                .toPort(65535)
+                .createdAt(LocalDateTime.now())
+                .build();
+
+        acl.addRule(defaultIngress);
+        acl.addRule(defaultEgress);
+
+        return naclRepository.save(acl);
     }
 
-    /**
-     * Checks if traffic is allowed through the Subnet's NACL.
-     */
-    public boolean isTrafficAllowed(UUID subnetId, int targetPort, String protocol, String sourceCidr) {
-        if (subnetId == null) {
-            return true; // No subnet bound, bypass
+    public List<NetworkAcl> listAclsForAccount(String accountId) {
+        return naclRepository.findByAccountId(accountId);
+    }
+
+    public NetworkAcl getAcl(UUID id) {
+        NetworkAcl acl = naclRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Network ACL not found: " + id));
+        SecurityUtils.validateAccountOwnership(acl.getAccountId());
+        return acl;
+    }
+
+    @Transactional
+    public NetworkAcl addRule(UUID naclId, AddNaclRuleRequest request) {
+        NetworkAcl acl = getAcl(naclId);
+
+        NetworkAclRule rule = NetworkAclRule.builder()
+                .ruleNumber(request.getRuleNumber())
+                .type(request.isEgress() ? "EGRESS" : "INGRESS")
+                .protocol(request.getProtocol() != null ? request.getProtocol().toUpperCase() : "ALL")
+                .ruleAction(request.getRuleAction() != null ? request.getRuleAction().toUpperCase() : "ALLOW")
+                .allow("ALLOW".equalsIgnoreCase(request.getRuleAction()))
+                .cidrBlock(request.getCidrBlock() != null ? request.getCidrBlock() : "0.0.0.0/0")
+                .fromPort(request.getFromPort() != null ? request.getFromPort() : 0)
+                .toPort(request.getToPort() != null ? request.getToPort() : 65535)
+                .createdAt(LocalDateTime.now())
+                .build();
+
+        acl.addRule(rule);
+        return naclRepository.save(acl);
+    }
+
+    @Transactional
+    public void deleteAcl(UUID id) {
+        NetworkAcl acl = getAcl(id);
+        if (acl.isDefault()) {
+            throw new IllegalArgumentException("Cannot delete default VPC Network ACL");
         }
+        naclRepository.delete(acl);
+    }
 
-        // Lazy initialize default NACL (Allow All) for the subnet if not present
-        List<NetworkAclRule> rules = subnetAcls.computeIfAbsent(subnetId, id -> {
-            List<NetworkAclRule> defaultRules = new java.util.concurrent.CopyOnWriteArrayList<>();
-            defaultRules.add(NetworkAclRule.builder()
-                    .ruleNumber(100)
-                    .protocol("ALL")
-                    .fromPort(0)
-                    .toPort(65535)
-                    .cidrBlock("0.0.0.0/0")
-                    .allow(true)
-                    .build());
-            return defaultRules;
-        });
+    public boolean isTrafficAllowed(UUID subnetId, int port, String protocol, String sourceIp) {
+        if (subnetId == null) return true;
+        var optionalNacl = naclRepository.findBySubnetId(subnetId);
+        if (optionalNacl.isEmpty()) return true;
 
-        // Sort rules by rule number ascending
-        List<NetworkAclRule> sortedRules = rules.stream()
+        NaclEvaluationRequest req = NaclEvaluationRequest.builder()
+                .ip(sourceIp != null ? sourceIp : "0.0.0.0")
+                .port(port)
+                .protocol(protocol != null ? protocol : "TCP")
+                .egress(false)
+                .build();
+        NaclEvaluationResponse res = evaluatePacket(optionalNacl.get().getId(), req);
+        return "ALLOW".equalsIgnoreCase(res.getDecision());
+    }
+
+    public NaclEvaluationResponse evaluatePacket(UUID naclId, NaclEvaluationRequest request) {
+        NetworkAcl acl = getAcl(naclId);
+
+        List<NetworkAclRule> rules = acl.getRules().stream()
+                .filter(r -> r.isEgress() == request.isEgress())
                 .sorted(Comparator.comparingInt(NetworkAclRule::getRuleNumber))
-                .collect(Collectors.toList());
+                .toList();
 
-        for (NetworkAclRule rule : sortedRules) {
-            if (ruleMatches(rule, targetPort, protocol, sourceCidr)) {
-                log.debug("NACL Rule {} matched: traffic {}. Subnet: {}, Port: {}", 
-                        rule.getRuleNumber(), rule.isAllow() ? "ALLOWED" : "DENIED", subnetId, targetPort);
-                return rule.isAllow();
+        for (NetworkAclRule rule : rules) {
+            if (!"ALL".equalsIgnoreCase(rule.getProtocol()) && request.getProtocol() != null) {
+                if (!rule.getProtocol().equalsIgnoreCase(request.getProtocol())) {
+                    continue;
+                }
+            }
+
+            if (request.getPort() > 0) {
+                if (request.getPort() < rule.getFromPort() || request.getPort() > rule.getToPort()) {
+                    continue;
+                }
+            }
+
+            if (CidrMatcher.matches(rule.getCidrBlock(), request.getIp())) {
+                return NaclEvaluationResponse.builder()
+                        .decision(rule.getRuleAction())
+                        .matchedRuleNumber(rule.getRuleNumber())
+                        .reason("Matched rule #" + rule.getRuleNumber() + " (" + rule.getRuleAction() + ")")
+                        .build();
             }
         }
 
-        // AWS NACL default catch-all is DENY if no rule matches
-        log.warn("NACL Default Deny triggered for Subnet: {}, Port: {}", subnetId, targetPort);
-        return false;
-    }
-
-    /**
-     * Adds or updates a rule for a subnet's NACL.
-     */
-    public void addOrUpdateRule(UUID subnetId, NetworkAclRule rule) {
-        List<NetworkAclRule> rules = subnetAcls.computeIfAbsent(subnetId, id -> new java.util.concurrent.CopyOnWriteArrayList<>());
-        // Remove existing rule with same rule number
-        rules.removeIf(r -> r.getRuleNumber() == rule.getRuleNumber());
-        rules.add(rule);
-        log.info("NACL Rule {} added to Subnet {}: protocol={}, port={}-{}, cidr={}, allow={}",
-                rule.getRuleNumber(), subnetId, rule.getProtocol(), rule.getFromPort(), rule.getToPort(), rule.getCidrBlock(), rule.isAllow());
-    }
-
-    /**
-     * Resets a subnet's NACL back to default "Allow All".
-     */
-    public void resetToDefault(UUID subnetId) {
-        subnetAcls.remove(subnetId);
-    }
-
-    private boolean ruleMatches(NetworkAclRule rule, int targetPort, String protocol, String sourceCidr) {
-        // 1. Protocol check
-        if (!"ALL".equalsIgnoreCase(rule.getProtocol()) && !rule.getProtocol().equalsIgnoreCase(protocol)) {
-            return false;
-        }
-
-        // 2. Port check
-        if (targetPort < rule.getFromPort() || targetPort > rule.getToPort()) {
-            return false;
-        }
-
-        // 3. CIDR check (Basic prefix matching for simulation, e.g. "0.0.0.0/0" matches all)
-        if ("0.0.0.0/0".equals(rule.getCidrBlock())) {
-            return true;
-        }
-        
-        if (sourceCidr == null) {
-            return false;
-        }
-
-        // Simple CIDR match: check if source IP starts with CIDR prefix
-        String ruleIpPrefix = rule.getCidrBlock().split("/")[0];
-        String sourceIp = sourceCidr.split("/")[0];
-        
-        // Match up to subnet bounds
-        if (rule.getCidrBlock().contains("/24")) {
-            String[] ruleParts = ruleIpPrefix.split("\\.");
-            String[] sourceParts = sourceIp.split("\\.");
-            if (ruleParts.length >= 3 && sourceParts.length >= 3) {
-                return ruleParts[0].equals(sourceParts[0]) &&
-                       ruleParts[1].equals(sourceParts[1]) &&
-                       ruleParts[2].equals(sourceParts[2]);
-            }
-        } else if (rule.getCidrBlock().contains("/16")) {
-            String[] ruleParts = ruleIpPrefix.split("\\.");
-            String[] sourceParts = sourceIp.split("\\.");
-            if (ruleParts.length >= 2 && sourceParts.length >= 2) {
-                return ruleParts[0].equals(sourceParts[0]) &&
-                       ruleParts[1].equals(sourceParts[1]);
-            }
-        }
-
-        return ruleIpPrefix.equalsIgnoreCase(sourceIp);
+        return NaclEvaluationResponse.builder()
+                .decision("DENY")
+                .matchedRuleNumber(32767)
+                .reason("Implicit default deny (*)")
+                .build();
     }
 }
